# Parsertang-public

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/: GITHUB_LAUNCH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  publication-checklist.md
docs/incidents/: no-alerts-root-cause.md
src/parsertang/: __main__.py  adaptive_symbol_limits.py  alert_evidence.py  alerts.py  (+36 more)
tests/: test_adaptive_symbol_limits.py  test_alert_dedup.py  test_alert_evidence.py  test_alert_routing.py  test_alert_trace.py  test_alert_truth_aggregator.py  test_alert_truth_fee.py  test_alerts.py  test_allowlist_file.py  test_config.py  test_diagnose_fees.py  test_dynamic_fees_integration.py  test_exchange_credentials.py  test_exchange_fees.py  test_exchange_symbol_limits.py  test_fee_currency_aliases.py  test_fee_debug.py  test_fee_statistics.py  test_fee_truth.py  test_fee_utils.py  test_gateway_circuit.py  test_health_monitor.py  test_liquidity.py  test_logging_conf.py  test_logging_sampling_bypass.py  test_logging_security.py  test_markets_logging.py  test_multi_user_access.py  test_network_aliases.py  test_network_comparison_usd.py  test_network_selection.py  test_opportunity_liquidity_sides.py  test_orchestrator.py  test_orchestrator_background_tasks.py  test_orchestrator_recover.py  test_orchestrator_symbol_filter.py  test_orchestrator_ws_native.py  test_orderbook_stale_guard.py  test_profit_calculations.py  test_refresh_trace.py  (+54 more)
(+32 files in other folders)
